# superpaste

./: Makefile  README.md  RELEASE.md  pyproject.toml  superpaste.py
docs/release/: CHECKLIST.md
tests/: test_exit_cleanup.py  test_reorder.py
