[project]
name = "superpaste"
version = "0.1.1"
description = "A small GUI utility for managing cut-and-paste text entries"
requires-python = ">=3.10"
dependencies = [
    "customtkinter",
    "click",
    "pyperclip",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"